// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts DELETE /:accountId/logo should return account with logo as null 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterprise": Object {
          "createdAt": "2017-07-19T00:14:30.932Z",
          "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "name": "Test Enterprise",
          "plan": "GROWTH",
        },
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "logo": null,
        "name": "Test Account",
        "unit": 15,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET / with manager role so only return one 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "name": "Test Account",
        "unit": 15,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET / with owner role so return all 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "name": "Test Account",
        "unit": 15,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET /:accountId get the account data 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "logo": null,
        "name": "Test Account",
        "unit": 15,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET /:accountId/users should fetch users for the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterprise": Object {
          "createdAt": "2017-07-19T00:14:30.932Z",
          "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "name": "Test Enterprise",
          "plan": "GROWTH",
        },
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "name": "Test Account",
        "unit": 15,
      },
    },
    "permissions": Object {
      "74d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "canAccessAllAccounts": true,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "OWNER",
      },
      "84d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "canAccessAllAccounts": true,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "id": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "MANAGER",
      },
    },
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "username": "owner@test.com",
      },
      "6668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "username": "manager@test.com",
      },
    },
  },
  "result": Array [
    "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
    "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
  ],
}
`;

exports[`/api/accounts POST /:accountId/newUser should create and return the user 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-20T00:14:30.932Z",
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "New",
  "id": "72954241-3652-4792-bae5-5bfed53d37b7",
  "lastName": "Guy",
  "username": "newguy@test.com",
}
`;

exports[`/api/accounts PUT /:accoutId should update the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "canSendRecalls": false,
        "canSendReminders": false,
        "createdAt": "2017-07-19T00:14:30.932Z",
        "enterprise": Object {
          "createdAt": "2017-07-19T00:14:30.932Z",
          "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "name": "Test Enterprise",
          "plan": "GROWTH",
        },
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "fullLogoUrl": null,
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "name": "Test That Thang",
        "unit": 15,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;
